--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -543,6 +543,12 @@
     <string name="auto_driver_confirmation">Are you an auto driver?</string>
     <string name="auto_status_confirmation">Do you have an auto ?</string>
     <string name="no_doc_available">No Documents Available</string>
+    <string name="upload">Upload</string>
+    <string name="mandatory">Mandatory</string>
+    <string name="optional">Optional</string>
+    <string name="uploaded">UPLOADED</string>
+    <string name="rejected">REJECTED</string>
+    <string name="verified">VERIFIED</string>
 
 
     <string-array name="CountryCodes" >
