--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -598,6 +598,13 @@
 	<string name="auto_driver_confirmation">Are you an auto driver?</string>
 	<string name="auto_status_confirmation">Do you have an auto ?</string>
 	<string name="no_doc_available">No Documents Available</string>
+	<string name="upload">Upload</string>
+	<string name="mandatory">Mandatory</string>
+	<string name="optional">Optional</string>
+	<string name="uploaded">UPLOADED</string>
+	<string name="rejected">REJECTED</string>
+	<string name="verified">VERIFIED</string>
+	<string name="approval_pending">APPROVAL PENDING</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
