--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -605,6 +605,9 @@
 	<string name="rejected">REJECTED</string>
 	<string name="verified">VERIFIED</string>
 	<string name="approval_pending">APPROVAL PENDING</string>
+	<string name="owned">Owned</string>
+	<string name="auto">Auto</string>
+	<string name="rejection_reason">Rejection Reason</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
