feature_upload_doccument: bug fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -597,6 +597,7 @@
 	<string name="Messages">Messages</string>
 	<string name="Hints">Hints</string>
 	<string name="tricks">Tricks To Earn</string>
+	<string name="uploading">Uploading</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
