--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -541,6 +541,7 @@
     <string name="return_subsidy">ৰিটাৰ্ণ  সাবচিদি</string>
     <string name="return_distance">ৰিটাৰ্ণ দূৰত্ব</string>
     <string name="delivery_details">ডেলিভাৰি বিৱৰন</string>
+    <string name="uploading">Uploading</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
