--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -538,6 +538,7 @@
     <string name="return_subsidy">પાછી આવાની સબસિડી</string>
     <string name="return_distance">પાછું આવાનું અંતર</string>
     <string name="delivery_details">ડિલિવરી વિગતો</string>
+    <string name="uploading">Uploading</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
