--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -563,6 +563,7 @@
     <string name="return_subsidy">ರಿಟರ್ನ್ ಸಬ್ಸಿಡಿ</string>
     <string name="return_distance">ಹಿಂದಿರುಗಿಸಿದ ದೂರ </string>
     <string name="delivery_details">ಡೆಲಿವರಿ ವಿವರಗಳು</string>
+    <string name="uploading">Uploading</string>
 
 
     <string-array name="CountryCodes" >
