--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -599,6 +599,7 @@
     <string name="return_subsidy">రిటర్న్ సబ్సిడీ</string>
     <string name="return_distance">రిటర్న్ దూరం</string>
     <string name="delivery_details">డెలివరీ వివరాలు</string>
+    <string name="uploading">Uploading</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
