--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -615,6 +615,7 @@
 	<string name="return_subsidy">Return Subsidy</string>
 	<string name="return_distance">Return Distance</string>
 	<string name="delivery_details">DELIVERY DETAILS</string>
+	<string name="uploading">Uploading</string>
 
 
 	<string-array name="CountryCodes" >
