--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -544,6 +544,20 @@
     <string name="return_distance">Return Distance</string>
     <string name="delivery_details">DELIVERY DETAILS</string>
     <string name="uploading">Uploading</string>
+    <string name="auto_number">Auto number</string>
+    <string name="Choose_one">Choose one:</string>
+    <string name="is_rented">I have a rented auto.</string>
+    <string name="is_owned">I own my auto.</string>
+
+    <string name="Documents">Documents</string>
+    <string name="Document_type">Document type</string>
+    <string name="Requirement">Requirement</string>
+    <string name="add_image">ADD IMAGE</string>
+    <string name="Submit">Submit</string>
+    <string name="owner">Owner</string>
+    <string name="approval_pending">APPROVAL PENDING</string>
+
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
