--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -600,6 +600,19 @@
     <string name="return_distance">రిటర్న్ దూరం</string>
     <string name="delivery_details">డెలివరీ వివరాలు</string>
     <string name="uploading">Uploading</string>
+    <string name="auto_number">Auto number</string>
+    <string name="Choose_one">Choose one:</string>
+    <string name="is_rented">I have a rented auto.</string>
+    <string name="is_owned">I own my auto.</string>
+
+    <string name="Documents">Documents</string>
+    <string name="Document_type">Document type</string>
+    <string name="Requirement">Requirement</string>
+    <string name="add_image">ADD IMAGE</string>
+    <string name="Submit">Submit</string>
+    <string name="owner">Owner</string>
+    <string name="approval_pending">APPROVAL PENDING</string>
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
