--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -524,6 +524,12 @@
     <string name="return_subsidy">પાછી આવાની સબસિડી</string>
     <string name="return_distance">પાછું આવાનું અંતર</string>
     <string name="delivery_details">ડિલિવરી વિગતો</string>
+    <string name="before_ride">BEFORE RIDE</string>
+    <string name="in_ride_rate">IN RIDE</string>
+    <string name="referral_rate">REFERRAL</string>
+    <string name="pickup_charges">Pickup Charges (per Km)</string>
+    <string name="base_fare">Base Fare</string>
+    <string name="time_per_min">Time (per min)</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
