--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -533,6 +533,8 @@
     <string name="pickup_charges">Pickup Charges (per Km)</string>
     <string name="base_fare">Base Fare</string>
     <string name="time_per_min">Time (per min)</string>
+    <string name="driver_to_customer">Driver to Customer</string>
+    <string name="driver_to_driver">Driver to Driver</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
