--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -596,6 +596,8 @@
 	<string name="base_fare">Base Fare</string>
 	<string name="distance_per_km">Distance (Per Km)</string>
 	<string name="time_per_min">Time (per min)</string>
+	<string name="driver_to_customer">Driver to Customer</string>
+	<string name="driver_to_driver">Driver to Driver</string>
 
 
 	<string-array name="CountryCodes" >
