--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -532,6 +532,7 @@
     <string name="time_per_min">Time (per min)</string>
     <string name="driver_to_customer">Driver to Customer</string>
     <string name="driver_to_driver">Driver to Driver</string>
+    <string name="rate_card">Rate Card</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
