--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -567,19 +567,9 @@
 	<string name="to_no_colon">को</string>
 	<string name="no_deliveries_pending">कोई डिलीवरी लंबित नही है </string>
 	<string name="no_deliveries_completed">डिलीवरी पूर्ण नही हुआ </string>
-	<string name="vehicle_status">Vehicle Status</string>
-	<string name="rented">Rented</string>
-	<string name="auto_driver_confirmation">Are you an auto driver?</string>
-	<string name="auto_status_confirmation">Do you have an auto ?</string>
-	<string name="no_doc_available">No Documents Available</string>
-	<string name="upload">Upload</string>
 	<string name="mandatory">Mandatory</string>
-	<string name="optional">Optional</string>
-	<string name="uploaded">UPLOADED</string>
-	<string name="rejected">REJECTED</string>
-	<string name="verified">VERIFIED</string>
 	<string name="owned">Owned</string>
-	<string name="auto">Auto</string>
+	<string name="auto">ऑटो</string>
 	<string name="rejection_reason">Rejection Reason</string>
 
 	<string name="cash_collected">नगद कलेक्ट किया </string>
@@ -594,22 +584,35 @@
 	<string name="return_subsidy">रिटर्न सब्सिडी </string>
 	<string name="return_distance">वापसी दूरी</string>
 	<string name="delivery_details">डिलीवरी विवरण</string>
-	<string name="Messages">Messages</string>
-	<string name="Hints">Hints</string>
-	<string name="tricks">Tricks To Earn</string>
 	<string name="uploading">Uploading</string>
-	<string name="auto_number">Auto number</string>
-	<string name="Choose_one">Choose one:</string>
-	<string name="is_rented">I have a rented auto.</string>
-	<string name="is_owned">I own my auto.</string>
 
-	<string name="Documents">Documents</string>
-	<string name="Document_type">Document type</string>
-	<string name="Requirement">Requirement</string>
-	<string name="add_image">ADD IMAGE</string>
-	<string name="Submit">Submit</string>
-	<string name="owner">Owner</string>
-	<string name="approval_pending">APPROVAL PENDING</string>
+
+
+	<string name="vehicle_status">वाहन की स्थिति</string>
+	<string name="rented">किराए पर</string>
+	<string name="auto_driver_confirmation">क्या आप एक ऑटो ड्राइवर हैं?</string>
+	<string name="auto_status_confirmation">क्या आपके पास एक ऑटो है ?</string>
+	<string name="no_doc_available">कोई दस्तावेज उपलब्ध नही </string>
+	<string name="upload">अपलोड</string>
+	<string name="optional">वैकल्पिक</string>
+	<string name="uploaded">अपलोड किया गया </string>
+	<string name="rejected">अस्वीकृत</string>
+	<string name="verified">सत्यापित</string>
+	<string name="Hints">संकेत</string>
+	<string name="tricks">चालें</string>
+	<string name="Messages">संदेश</string>
+
+	<string name="auto_number">वाहन नंबर</string>
+	<string name="Choose_one">एक चुनो</string>
+	<string name="is_rented">मैनें किराए पर एक ऑटो किया है</string>
+	<string name="is_owned">मैं अपने ऑटो का मालिक हूँ</string>
+	<string name="Documents">दस्तावेज़</string>
+	<string name="Document_type">दस्तावेज़ का प्रकार</string>
+	<string name="Requirement">आवश्यकता</string>
+	<string name="add_image">छवि जोड़ें</string>
+	<string name="Submit">जमा करें</string>
+	<string name="owner">मालिक</string>
+	<string name="approval_pending">स्वीकृति लंबित</string>
 
 
 
