--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -515,23 +515,10 @@
     <string name="no_deliveries_pending">ഡെലിവറികൾ എല്ലാം പൂർത്തിയായി</string>
     <string name="no_deliveries_completed">ഡെലിവറികൾ ഒന്നും പൂർത്തിയായില്ല</string>
     <string name="cash_collected">ക്യാഷ് ശേഖരിച്ചു</string>
-    <string name="vehicle_status">Vehicle Status</string>
-    <string name="rented">Rented</string>
-    <string name="auto_driver_confirmation">Are you an auto driver?</string>
-    <string name="auto_status_confirmation">Do you have an auto ?</string>
-    <string name="no_doc_available">No Documents Available</string>
-    <string name="upload">Upload</string>
     <string name="mandatory">Mandatory</string>
-    <string name="optional">Optional</string>
-    <string name="uploaded">UPLOADED</string>
-    <string name="rejected">REJECTED</string>
-    <string name="verified">VERIFIED</string>
     <string name="owned">Owned</string>
     <string name="auto">Auto</string>
     <string name="rejection_reason">Rejection Reason</string>
-    <string name="Messages">Messages</string>
-    <string name="Hints">Hints</string>
-    <string name="tricks">Tricks To Earn</string>
 
     <string name="s_no">S.No.</string>
     <string name="order_no">ഓർഡർ നമ്പർ</string>
@@ -539,23 +526,37 @@
     <string name="present_near_delivery_location">ഈ ഓർഡർ ഡെലിവറി ചെയ്തു എന്ന്  അടയാളപ്പെടുത്താൻ താങ്കൾ ഡെലിവറി സ്ഥലത്തിനടുത്ത് ഉണ്ടായിരിക്കണം.</string>
     <string name="success">കഴിഞ്ഞു</string>
     <string name="outstanding_amount">കുടിശ്ശിക ക്രമീകരിച്ചു</string>
-    <string name="delivery_fare">Delivery Fare</string>
-    <string name="return_subsidy">Return Subsidy</string>
-    <string name="return_distance">Return Distance</string>
+    <string name="delivery_fare">ഡെലിവറിയുടെ ചിലവ്</string>
+    <string name="return_subsidy">മടങ്ങി വരവിനുള്ള സബ്സിഡി</string>
+    <string name="return_distance">റിട്ടേൺ ദൂരം</string>
     <string name="delivery_details">DELIVERY DETAILS</string>
     <string name="uploading">Uploading</string>
-    <string name="auto_number">Auto number</string>
-    <string name="Choose_one">Choose one:</string>
-    <string name="is_rented">I have a rented auto.</string>
-    <string name="is_owned">I own my auto.</string>
 
-    <string name="Documents">Documents</string>
-    <string name="Document_type">Document type</string>
-    <string name="Requirement">Requirement</string>
-    <string name="add_image">ADD IMAGE</string>
-    <string name="Submit">Submit</string>
-    <string name="owner">Owner</string>
-    <string name="approval_pending">APPROVAL PENDING</string>
+    <string name="vehicle_status">വാഹനത്തിന്റെ  നില</string>
+    <string name="rented">വാടക</string>
+    <string name="auto_driver_confirmation">നിങ്ങൾ ഒരു ഓട്ടോ ഡ്രൈവർ ആണോ?</string>
+    <string name="auto_status_confirmation">നിങ്ങൾക്ക് ഒരു ഓട്ടോ ഉണ്ടോ?</string>
+    <string name="no_doc_available">ഡോക്യൂമെന്റസ് ലഭ്യമല്ല</string>
+    <string name="upload">അപ്ലോഡ്</string>
+    <string name="optional">ഓപ്ഷണൽ</string>
+    <string name="uploaded">അപ്ലോഡുചെയ്തിരിക്കുന്നു  </string>
+    <string name="rejected">നിരസിച്ചു</string>
+    <string name="verified">പരിശോധിച്ചു</string>
+    <string name="Hints">സൂചനകൾ</string>
+    <string name="tricks">തന്ത്രങ്ങളും</string>
+    <string name="Messages">സന്ദേശങ്ങൾ</string>
+
+    <string name="auto_number">ഓട്ടോ നമ്പർ</string>
+    <string name="Choose_one">ഒന്ന് തിരഞ്ഞെടുക്കുക</string>
+    <string name="is_rented">എനിക്ക് ഒരു വാടക ഓട്ടോ ഉണ്ട് </string>
+    <string name="is_owned">എനിക്ക് സ്വന്തമായി ഓട്ടോ ഉണ്ട് </string>
+    <string name="Documents">ഡോക്യൂമെൻറ്</string>
+    <string name="Document_type">ഡോക്യൂമെൻറ് തരം </string>
+    <string name="Requirement">ആവശ്യകത</string>
+    <string name="add_image">ചിത്രം ചേർക്കാൻ</string>
+    <string name="Submit">സമർപ്പിക്കുക</string>
+    <string name="owner">ഉടമ</string>
+    <string name="approval_pending">അംഗീകാരം തീർച്ചപ്പെടുത്തിയില്ല</string>
 
 
 
