--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -514,23 +514,10 @@
     <string name="to_no_colon">କୁ</string>
     <string name="no_deliveries_pending">କୌଣସି ଡେଲିଭରି ପେଣ୍ଡିଂଗ୍ ନାହିଁ</string>
     <string name="no_deliveries_completed">ଡେଲିଭରି ପୁରଣ ହୋଇ ନାହିଁ</string>
-    <string name="vehicle_status">Vehicle Status</string>
-    <string name="rented">Rented</string>
-    <string name="auto_driver_confirmation">Are you an auto driver?</string>
-    <string name="auto_status_confirmation">Do you have an auto ?</string>
-    <string name="no_doc_available">No Documents Available</string>
-    <string name="upload">Upload</string>
     <string name="mandatory">Mandatory</string>
-    <string name="optional">Optional</string>
-    <string name="uploaded">UPLOADED</string>
-    <string name="rejected">REJECTED</string>
-    <string name="verified">VERIFIED</string>
     <string name="owned">Owned</string>
     <string name="auto">Auto</string>
     <string name="rejection_reason">Rejection Reason</string>
-    <string name="Messages">Messages</string>
-    <string name="Hints">Hints</string>
-    <string name="tricks">Tricks To Earn</string>
 
     <string name="cash_collected">ରାଶି ଆଦାୟ ହୋଇସାରିଛି.</string>
     <string name="s_no">କ୍ରମାଂକ</string>
@@ -544,19 +531,33 @@
     <string name="return_distance">ରିଟର୍ଣ ଦୁରତା</string>
     <string name="delivery_details">ଡେଲିଭେରି  ବିବରଣି</string>
     <string name="uploading">Uploading</string>
-    <string name="auto_number">Auto number</string>
-    <string name="Choose_one">Choose one:</string>
-    <string name="is_rented">I have a rented auto.</string>
-    <string name="is_owned">I own my auto.</string>
 
-    <string name="Documents">Documents</string>
-    <string name="Document_type">Document type</string>
-    <string name="Requirement">Requirement</string>
-    <string name="add_image">ADD IMAGE</string>
-    <string name="Submit">Submit</string>
-    <string name="owner">Owner</string>
-    <string name="approval_pending">APPROVAL PENDING</string>
 
+    <string name="vehicle_status">ଗାଡ଼ିର ସ୍ଥିତି</string>
+    <string name="rented">ଭଡ଼ାରେ</string>
+    <string name="auto_driver_confirmation">ଆପଣ ଜଣେ ଅଟୋ ଡ୍ରାଇଭର୍ କି ?</string>
+    <string name="auto_status_confirmation">ଆପଣଂକ ପାଖରେ ଅଟୋ ଅଛି କି ?</string>
+    <string name="no_doc_available">କୌଣସି ଡକ୍ୟୁମେଣ୍ଟ୍ ଉପଲବ୍ଧ ନାହିଁ</string>
+    <string name="upload">ଅପ୍-ଲୋଡ଼୍</string>
+    <string name="optional">ଇଛାଧିନ</string>
+    <string name="uploaded">ଅପ୍-ଲୋଡ଼୍ କରାହୋଇଛି</string>
+    <string name="rejected">ପ୍ରତ୍ୟାଖ୍ୟାନ</string>
+    <string name="verified">ଯାଂଚ୍ ହୋଇଜାଇଛି</string>
+    <string name="Hints">ସକେଂତ</string>
+    <string name="tricks">ଛଳ</string>
+    <string name="Messages">ସନ୍ଦେଷ୍</string>
+
+    <string name="auto_number">ଅଟୋ ନମ୍ବର୍</string>
+    <string name="Choose_one">ଗୋଟିଏ ବାଛନ୍ତୁ</string>
+    <string name="is_rented">ମୋର ଭଡାରେ ଗୋଟିଏ ଅଟୋ ଅଛି</string>
+    <string name="is_owned">ମୋର ନିଜର ଗୋଟେ ଅଟୋ ଅଛି</string>
+    <string name="Documents">ଡକ୍ୟୁମେଣ୍ଟ୍</string>
+    <string name="Document_type">ଡକ୍ୟୁମେଣ୍ଟ୍ ପ୍ରକାର</string>
+    <string name="Requirement">ଆବଶ୍ୟକତା</string>
+    <string name="add_image">ଛବି ଯୋଡନ୍ତୁ</string>
+    <string name="Submit">ଜମା କରନ୍ତୁ</string>
+    <string name="owner">ମାଲିକ</string>
+    <string name="approval_pending">ଅନୁମୋଦନ ପୁର୍ଣ ହୋଇନାହି</string>
 
 
     <string-array name="CountryCodes" >
