--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -594,8 +594,8 @@
 	<string name="referral_rate">REFERRAL</string>
 	<string name="pickup_charges">Pickup Charges (per Km)</string>
 	<string name="base_fare">Base Fare</string>
-	<string name="distance_per_km">Distance (Per Km)</string>
-	<string name="time_per_min">Time (per min)</string>
+	<string name="distance_per_km">Distance\n(Per Km)</string>
+	<string name="time_per_min">Time\n(per min)</string>
 	<string name="driver_to_customer">Driver to Customer</string>
 	<string name="driver_to_driver">Driver to Driver</string>
 	<string name="rate_card">Rate Card</string>
