--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -593,6 +593,7 @@
     <string name="driver_to_customer">Driver to Customer</string>
     <string name="driver_to_driver">Driver to Driver</string>
     <string name="rate_card">Rate Card</string>
+    <string name="applicable_after">Applicable after %1$d Kmz</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
