--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -592,23 +592,10 @@
     <string name="all_orders_have_been_delivered">அணைத்து ஆடர்களும் ஒப்படைக்கபட்டன</string>
     <string name="order_no">Order No.</string>
     <string name="details">Details</string>
-    <string name="vehicle_status">Vehicle Status</string>
-    <string name="rented">Rented</string>
-    <string name="auto_driver_confirmation">Are you an auto driver?</string>
-    <string name="auto_status_confirmation">Do you have an auto ?</string>
-    <string name="no_doc_available">No Documents Available</string>
-    <string name="upload">Upload</string>
-    <string name="mandatory">Mandatory</string>
-    <string name="optional">Optional</string>
-    <string name="uploaded">UPLOADED</string>
-    <string name="rejected">REJECTED</string>
-    <string name="verified">VERIFIED</string>
+    <string name="mandatory">கட்டாய</string>
     <string name="owned">Owned</string>
     <string name="auto">Auto</string>
-    <string name="rejection_reason">Rejection Reason</string>
-    <string name="Messages">Messages</string>
-    <string name="Hints">Hints</string>
-    <string name="tricks">Tricks To Earn</string>
+    <string name="rejection_reason">நிராகரித்தல் காரணம்</string>
 
 
     <string name="to_no_colon">செய்ய</string>
@@ -624,20 +611,35 @@
     <string name="return_subsidy">Return Subsidy</string>
     <string name="return_distance">Return Distance</string>
     <string name="delivery_details">DELIVERY DETAILS</string>
-    <string name="uploading">Uploading</string>
+    <string name="uploading">பதிவேற்ற</string>
 
-    <string name="auto_number">Auto number</string>
-    <string name="Choose_one">Choose one:</string>
-    <string name="is_rented">I have a rented auto.</string>
-    <string name="is_owned">I own my auto.</string>
 
-    <string name="Documents">Documents</string>
-    <string name="Document_type">Document type</string>
-    <string name="Requirement">Requirement</string>
-    <string name="add_image">ADD IMAGE</string>
-    <string name="Submit">Submit</string>
-    <string name="owner">Owner</string>
-    <string name="approval_pending">APPROVAL PENDING</string>
+
+    <string name="vehicle_status">வாகன நிலை</string>
+    <string name="rented">வாடகைக்கு எடுக்கப்பட்ட</string>
+    <string name="auto_driver_confirmation">நீங்கள் ஒரு ஆட்டோ டிரைவர்?</string>
+    <string name="auto_status_confirmation">நீங்கள் ஒரு ஆட்டோ  வேண்டும்?</string>
+    <string name="no_doc_available">கிடைக்கும் ஆவணங்கள் எதுவும் இல்லை</string>
+    <string name="upload">பதிவேற்ற</string>
+    <string name="optional">விருப்ப</string>
+    <string name="uploaded">பதிவேற்றிய</string>
+    <string name="rejected">நிராகரிக்கப்பட்டது</string>
+    <string name="verified">சரிபார்க்கப்பட்டது</string>
+    <string name="Hints">குறிப்புகள்</string>
+    <string name="tricks">தந்திரங்களை</string>
+    <string name="Messages">செய்திகள்</string>
+
+    <string name="auto_number">வாகன எண்ணிக்கை</string>
+    <string name="Choose_one">ஒன்றை தேர்ந்தெடு</string>
+    <string name="is_rented">நான் ஒரு வாடகை ஆட்டோ வேண்டும்</string>
+    <string name="is_owned">நான் என் ஆட்டோ சொந்தமாக</string>
+    <string name="Documents">ஆவணங்கள்</string>
+    <string name="Document_type">ஆவண வகை</string>
+    <string name="Requirement">தேவை</string>
+    <string name="add_image">படத்தை சேர்க்க</string>
+    <string name="Submit">சமர்ப்பிக்கவும்</string>
+    <string name="owner">உரிமையாளர்</string>
+    <string name="approval_pending">ஒப்புதல் நிலுவையில்</string>
 
 
     <string-array name="CountryCodes" >
