--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -616,7 +616,6 @@
     <string name="approval_pending">అనుమతి వాయిదా</string>
 
 
-    <string name="applicable_after">Applicable after %1$d Kmz</string>
     <string name="rejection_reason">రిజెక్షన్ కారణము</string>
     <string name="mandatory">తప్పనిసరి</string>
     <string name="before_ride">రైడ్ ముందు</string>
@@ -628,6 +627,7 @@
     <string name="driver_to_customer">కస్టమర్ డ్రైవర్</string>
     <string name="driver_to_driver">డ్రైవర్ డ్రైవర్</string>
     <string name="rate_card">రేటు కార్డ్</string>
+    <string name="applicable_after">Applicable after %1$s Kms</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
