--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -518,14 +518,11 @@
     <string name="auto_status_confirmation">Do you have an auto ?</string>
     <string name="no_doc_available">একো কাগজপত্ৰ নাই</string>
     <string name="upload">আপলোড</string>
-    <string name="mandatory">கட்டாய</string>
     <string name="optional">অপস্নেল</string>
     <string name="uploaded">আপলোড কৰা হল</string>
     <string name="rejected">নাকচ কৰা হল</string>
     <string name="verified">ভেৰিফাইদ</string>
-    <string name="owned">Owned</string>
     <string name="auto">Auto</string>
-    <string name="rejection_reason">Rejection Reason</string>
     <string name="Messages">Messages</string>
     <string name="Hints">Hints</string>
     <string name="tricks">Tricks To Earn</string>
@@ -559,16 +556,22 @@
     <string name="owner">মালিক</string>
     <string name="approval_pending">অনুমোদন পেন্দিং</string>
 
-    <string name="before_ride">BEFORE RIDE</string>
-    <string name="in_ride_rate">IN RIDE</string>
-    <string name="referral_rate">REFERRAL</string>
-    <string name="pickup_charges">Pickup Charges (per Km)</string>
-    <string name="base_fare">Base Fare</string>
-    <string name="time_per_min">Time (per min)</string>
-    <string name="driver_to_customer">Driver to Customer</string>
-    <string name="driver_to_driver">Driver to Driver</string>
-    <string name="rate_card">Rate Card</string>
-    <string name="applicable_after">Applicable after %1$d Kmz</string>
+    <string name="applicable_after">Applicable after %1$s Kms</string>
+
+    <string name="rejection_reason">খাৰিজ হোৱা কাৰণ</string>
+    <string name="mandatory">কার্যভাৰ</string>
+    <string name="before_ride">ৰাইদেৰ আগত</string>
+    <string name="in_ride_rate">ইন ৰাইদে</string>
+    <string name="referral_rate">ৰেফাৰেল</string>
+    <string name="pickup_charges">পিকঅপৰ মুল্য (প্ৰতি কি.মি)</string>
+    <string name="base_fare"> সর্বনিম্ন ভাড়া</string>
+    <string name="time_per_min">সময় ( প্ৰতি মি:)</string>
+    <string name="driver_to_customer">চালকৰ পৰা গ্ৰাহক</string>
+    <string name="driver_to_driver">চালকৰ পৰা চালক</string>
+    <string name="rate_card"> ভাড়াৰ কার্ড</string>
+    <string name="owned">নিজোৰ</string>
+
+
 
     <string-array name="CountryCodes" >
 
