--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -579,7 +579,6 @@
     <string name="owner">ಮಾಲೀಕರು</string>
     <string name="approval_pending">ಅನುಮೋದನೆಗೆ ಬಾಕಿ</string>
 
-    <string name="applicable_after">Applicable after %1$d Kmz</string>
     <string name="rejection_reason">ತಿರಸ್ಕಾರದ ಕಾರಣ </string>
     <string name="mandatory">ಕಡ್ಡಾಯ</string>
     <string name="before_ride">ಸವಾರಿಯ ಮೊದಲು </string>
@@ -591,6 +590,7 @@
     <string name="driver_to_customer">ಚಾಲಕರಿಂದ ಗ್ರಾಕರಿಗೆ  </string>
     <string name="driver_to_driver">ಚಾಲಕರಿಂದ ಚಾಲಕರಿಗೆ </string>
     <string name="rate_card">ದರದ ಕಾರ್ಡ್</string>
+    <string name="applicable_after">Applicable after %1$s Kms</string>
 
 
     <string-array name="CountryCodes" >
