beta_new: multilingual changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -570,6 +570,8 @@
     <string name="driver_to_driver">চালকৰ পৰা চালক</string>
     <string name="rate_card"> ভাড়াৰ কার্ড</string>
     <string name="owned">নিজোৰ</string>
+    <string name="distance_per_km">দূৰত্ব\n( প্ৰতি মি:)</string>
+
 
 
 
