--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ml/strings.xml
@@ -571,6 +571,8 @@
     <string name="driver_to_driver">ഡ്രൈവറിൽ നിന്നു ഡ്രൈവറിലേക് </string>
     <string name="rate_card">റേറ്റ് കാർഡ്</string>
     <string name="owned">സ്വന്തം</string>
+    <string name="distance_per_km">അകലം\n( മിനിറ്റിന് )</string>
+
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
