--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -567,7 +567,8 @@
     <string name="rate_card">ભાવ પત્રક</string>
     <string name="owned">માલિકી</string>
     <string name="distance_per_km">અંતર\n( મિનિટ દીઠ )</string>
-
+    <string name="per_km">(મિનિટ દીઠ)</string>
+    <string name="delivery_off">Delivery OFF</string>
 
 
     <string-array name="CountryCodes" >
