--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -653,6 +653,8 @@
     <string name="rate_card">விலை அட்டை</string>
     <string name="applicable_after">Applicable after %1$s Kms</string>
     <string name="distance_per_km">தூரம்\n(நிமிடம் ஒன்றுக்கு)</string>
+    <string name="per_km">(நிமிடம் ஒன்றுக்கு)</string>
+    <string name="delivery_off">Delivery OFF</string>
 
 
     <string-array name="CountryCodes" >
