--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-as/strings.xml
@@ -530,6 +530,11 @@
     <string name="return_subsidy">ৰিটাৰ্ণ  সাবচিদি</string>
     <string name="return_distance">ৰিটাৰ্ণ দূৰত্ব</string>
     <string name="delivery_details">ডেলিভাৰি বিৱৰন</string>
+    <string name="self_audit">Self Audit</string>
+    <string name="front">Front</string>
+    <string name="add_photo">+ Add Photo</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
