--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-gu/strings.xml
@@ -527,6 +527,11 @@
     <string name="return_subsidy">પાછી આવાની સબસિડી</string>
     <string name="return_distance">પાછું આવાનું અંતર</string>
     <string name="delivery_details">ડિલિવરી વિગતો</string>
+    <string name="self_audit">Self Audit</string>
+    <string name="front">Front</string>
+    <string name="add_photo">+ Add Photo</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
