--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-kn/strings.xml
@@ -552,6 +552,11 @@
     <string name="return_subsidy">ರಿಟರ್ನ್ ಸಬ್ಸಿಡಿ</string>
     <string name="return_distance">ಹಿಂದಿರುಗಿಸಿದ ದೂರ </string>
     <string name="delivery_details">ಡೆಲಿವರಿ ವಿವರಗಳು</string>
+    <string name="self_audit">Self Audit</string>
+    <string name="front">Front</string>
+    <string name="add_photo">+ Add Photo</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 
 
     <string-array name="CountryCodes" >
