--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -532,6 +532,11 @@
     <string name="return_subsidy">ରିଟର୍ଣ ସବ୍ସିଡି</string>
     <string name="return_distance">ରିଟର୍ଣ ଦୁରତା</string>
     <string name="delivery_details">ଡେଲିଭେରି  ବିବରଣି</string>
+    <string name="self_audit">Self Audit</string>
+    <string name="front">Front</string>
+    <string name="add_photo">+ Add Photo</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
