--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -587,6 +587,11 @@
     <string name="return_subsidy">రిటర్న్ సబ్సిడీ</string>
     <string name="return_distance">రిటర్న్ దూరం</string>
     <string name="delivery_details">డెలివరీ వివరాలు</string>
+    <string name="self_audit">Self Audit</string>
+    <string name="front">Front</string>
+    <string name="add_photo">+ Add Photo</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
