--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -587,6 +587,8 @@
 	<string name="Hints">Hints</string>
 	<string name="tricks">Tricks To Earn</string>
 	<string name="Yesterday">Yesterday</string>
+	<string name="ride_money">Ride Money</string>
+	<string name="total_amount">Total Amount</string>
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
