--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-or/strings.xml
@@ -533,6 +533,8 @@
     <string name="return_distance">ରିଟର୍ଣ ଦୁରତା</string>
     <string name="delivery_details">ଡେଲିଭେରି  ବିବରଣି</string>
     <string name="Yesterday">Yesterday</string>
+    <string name="ride_money">Ride Money</string>
+    <string name="total_amount">Total Amount</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
