--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -588,6 +588,8 @@
     <string name="return_distance">రిటర్న్ దూరం</string>
     <string name="delivery_details">డెలివరీ వివరాలు</string>
     <string name="Yesterday">Yesterday</string>
+    <string name="ride_money">Ride Money</string>
+    <string name="total_amount">Total Amount</string>
 
     <string-array name="CountryCodes" >
         <item>93,AF</item>
