--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -594,6 +594,8 @@
 	<string name="please_start_customer_ride">Please start %s\'s ride</string>
 	<string name="Yesterday">Yesterday</string>
 	<string name="this_week">This Week</string>
+	<string name="ride_money">Ride Money</string>
+	<string name="total_amount">Total Amount</string>
 
 
 	<string-array name="CountryCodes" >
